# amlnn-model-playground

./: README.md  README_CN.md
common/: model_loader.cpp  model_loader.h
dependency/nnsdk/include/: nn_sdk.h
dependency/nnsdk_v2.8.5/: release_note.txt
dependency/nnsdk_v2.8.5/include/: nn_sdk.h
dependency/nnsdk_v2.8.5/include/postprocess/: postprocess.h
dependency/nnsdk_v2.8.5/include/utils/: utils.h
examples/clip/cpp/: build-android.sh  build-linux.sh
examples/clip/cpp/src/: CMakeLists.txt  main.cpp  model_invoke.cpp  model_invoke.h  pre_postprocess.cpp
examples/mobilenet/cpp/: CMakeLists.txt  build-android.sh  build-linux.sh
examples/mobilenet/cpp/src/: main.cpp
examples/whisper/cpp/: build-android.sh
examples/whisper/cpp/src/: CMakeLists.txt  common.cpp  common.h  main.cpp  post_process_whisper.cpp  post_process_whisper.h  pre_post_common.h  pre_process_whisper.cpp  pre_process_whisper.h  whisper.cpp  whisper.h  whisper_invoke.cpp  whisper_invoke.h
examples/yoloe/cpp/: build-android.sh  build-linux.sh
examples/yoloe/cpp/src/: CMakeLists.txt  main.cpp
examples/yolov8/cpp/: build-android.sh  build-linux.sh
examples/yolov8/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h
examples/yoloworld/cpp/: .gitkeep  build-android.sh  build-linux.sh
examples/yoloworld/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h
